--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                       Hire Me
                     </button>
                   </a>
-                  <a href="cv/Ahed-BAHRI-CV.pdf" download>   
+                  <a href="myCV/AHED-BAHRI-CV.pdf" download>   
                     <button type="button" class="btn button secondary-button text-uppercase"> Get CV </button>
                   </a>
                 </div>
@@ -125,7 +125,7 @@
                 <p class="para">
                   I'm independent, passionate, and innovative. I appreciate a work environment with a positive atmosphere and a strong team spirit. I also have good communication and team management skills.
                 </div>
-                <a href="cv/Ahed-BAHRI-CV.pdf" download>   
+                <a href="myCV/AHED-BAHRI-CV.pdf" download>   
                   <button type="button" class="btn button primary-button text-uppercase"> Download CV </button>
                 </a>
             </div>
